experiment with rabbitmq

--- a/tests/Hangfire.PostgreSql.Tests.Web/Hangfire.PostgreSql.Tests.Web.csproj
+++ b/tests/Hangfire.PostgreSql.Tests.Web/Hangfire.PostgreSql.Tests.Web.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Hangfire.PostgreSql.AMQP\Hangfire.PostgreSql.AMQP.csproj" />
     <ProjectReference Include="..\..\src\Hangfire.PostgreSql\Hangfire.PostgreSql.csproj" />
     <ProjectReference Include="..\Hangfire.PostgreSql.Tests\Hangfire.PostgreSql.Tests.csproj" />
   </ItemGroup>
